update manual deploy networks

--- a/.github/workflows/graph-manual.yaml
+++ b/.github/workflows/graph-manual.yaml
@@ -12,6 +12,9 @@ on:
           - mainnet
           - arbitrum
           - polygon
+          - gnosis
+          - optimism
+          - avalanche
           - goerli
 
 jobs:
